[package]
name = "gol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true
lto = "thin"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[dependencies]
indicatif = { version = "0.17.3", features = ["rayon"] }
rand = "0.8"
rayon = "1.7.0"
ril = { version = "0.9", features = ["png"] }
serde = {version = "1.0.159", features=["derive"]}

[[bench]]
name = "benchmark"
harness = false
